Tue Aug 22 18:42:04 PDT 2000 Manish Singh <yosh@gimp.org>

	* configure.in: $srcdir != $builddir fix for GIMP_CONTRIBUTORS

	* plug-ins/common/plugin-defs.pl: More tidying up after Daniel Egger

	* tools/pdbgen/Makefile.am: parse pdb defs only once for app and lib

	* tools/pdbgen/lib.pl
	* tools/pdbgen/pdb/procedural_db.pdb: all void rets now return a
	boolean for success/failure

2000-08-23  Nick Lamb  <njl195@zepler.org.uk>

	* plug-ins/Makefile.am:
	* plug-ins/common/.cvsignore: Tidy up after Daniel Egger

Tue Aug 22 20:42:52 CEST 2000 Daniel Egger  <egger@suse.de>

	* plug-ins/gfli/gfli.c: removed COMPAT_CRUFT.

Tue Aug 22 20:42:52 CEST 2000 Daniel Egger  <egger@suse.de>
	
	* plug-ins/common/cubism.c: Made a few minor optimisations.

Tue Aug 22 18:26:06 CEST 2000 Daniel Egger  <egger@suse.de>
	
	* plug-ins/Makefile.am: 
	* plug-ins/common/Makefile.am:
	* plug-ins/sinus/Makefile.am:
	* plug-ins/sinus/sinus.c:
	* plug-ins/sinus/sinus_logo.h:
	* plug-ins/common/sinus.c:
	* plug-ins/common/struc.c:
	* plug-ins/struc/struc.c:
	* plug-ins/struc/struc.h: Simplified sinus and struct and
	moved them into common. removed COMPAT_CRUFT.
	
	* plug-ins/common/mpeg.c: removed COMPAT_CRUFT.
	
2000-08-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/*.[ch]
	* plug-ins/Lighting/*.[ch]
	* plug-ins/MapObject/*.[ch]
	* plug-ins/bmp/*.[ch]
	* plug-ins/faxg3/faxg3.c
	* plug-ins/fits/fits.c
	* plug-ins/flame/flame.c
	* plug-ins/fp/*.[ch]
	* plug-ins/gap/*.[ch]
	* plug-ins/gdyntext/*.[ch]
	* plug-ins/gfig/gfig.c
	* plug-ins/gflare/gflare.c
	* plug-ins/gfli/gfli.c
	* plug-ins/gimpressionist/*.c
	* plug-ins/script-fu/*.[ch]: removed COMPAT_CRUFT.
	
Tue Aug 22 03:35:46 CEST 2000 Daniel Egger  <egger@suse.de>

	* plug-ins/common/AlienMap.c: Cleaned up AlienMap 
	and moved to common.
	
	* plug-ins/common/AlienMap2.c: Cleaned up AlienMap2,
	removed COMPAT_CRUFT and moved to common.
	
	* plug-ins/Makefile.am: Removed AlienMap and AlienMap2.